<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/flores"
    tools:context=".DatosEstudiantes">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo2"
        android:textSize="@dimen/tamaño_letra"
        android:textStyle="bold"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/tuNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        android:textSize="@dimen/tamaño_letra_formulario"
        android:layout_marginTop="@dimen/espacio_top"/>

    <TextView
        android:id="@+id/tuApellidos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apellidos"
        android:textSize="@dimen/tamaño_letra_formulario"
        android:layout_marginTop="@dimen/espacio_top"/>


    <TextView
        android:id="@+id/tuEdad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edad"
        android:textSize="@dimen/tamaño_letra_formulario"
        android:layout_marginTop="@dimen/espacio_top"/>

    <TextView
        android:id="@+id/tuCorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/correo"
        android:textSize="@dimen/tamaño_letra_formulario"
        android:layout_marginTop="@dimen/espacio_top"/>
    <TextView
        android:id="@+id/tuCui"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cui"
        android:textSize="@dimen/tamaño_letra_formulario"
        android:layout_marginTop="@dimen/espacio_top"/>
    <Button
        android:id="@+id/btnOk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnOk"
        android:layout_marginTop="@dimen/espacio_top"
        />
</LinearLayout>